include/colyseus/predict/predict.h

/*
 * Predict — passive smoothing of the server stream for entities you DON'T
 * control (port of predict/Predictor.ts, passive engine). One read idiom:
 * colyseus_predict_value(p, instance, field) — lerp / extrapolate / damped /
 * reckon / raw per tracked field, raw instance fallback when untracked.
 *
 * Samples arrive via the schema callbacks layer (listen), stamped on the
 * server-time axis when a clock is present. Call colyseus_predict_tick once
 * per render frame.
 */
typedef struct colyseus_predict colyseus_predict_t;
typedef enum {
    COLYSEUS_PREDICT_LERP,
    COLYSEUS_PREDICT_EXTRAPOLATE,
    COLYSEUS_PREDICT_DAMPED,
    COLYSEUS_PREDICT_RECKON,
    COLYSEUS_PREDICT_RAW,
} colyseus_predict_mode_t;
/* Per-field smoothing options. Zero-init + set `mode`; 0/false members take
 * the reference defaults (delay 100, damping 15, max_extrapolate 200). */
typedef struct {
    colyseus_predict_mode_t mode;
    double delay;            /* lerp render-time lag (ms) */
    double damping;          /* damped/extrapolate spring (1/s); < 0 = 0 (raw projection) */
    double max_extrapolate;  /* extrapolate overshoot cap (ms) */
    double tick_interval;    /* arrival-grid snap (ms); 0 off */
    double snap;             /* value-space teleport threshold; 0 off */
    bool angle;              /* radian angle — unwrap samples over the shortest arc */
} colyseus_predict_field_options_t;
/* Dead-reckoning step: advance `state` (a scratch schema instance) in place
 * by `dt` seconds; `elapsed_ms` is the absolute server-time at the END of
 * the substep (for time-sampled formulas). */
typedef void (*colyseus_predict_step_fn)(
    colyseus_schema_t* state, double dt, double elapsed_ms, void* userdata);
/* One field of an attach config: which field, and how to smooth it.
 *
 * The reference takes a per-field MAP (`{ x: "lerp", yaw: { mode: "damped",
 * angle: true } }`); C has no map literal, so the same thing is an array of
 * these. `opts` NULL = lerp with defaults. */
typedef struct {
    const char* field;
    const colyseus_predict_field_options_t* opts;
} colyseus_attach_field_t;
/**
 * Optional dead reckoning of a spawn collection's CONFIRMED entities, passed to
 * colyseus_predict_bind_spawns(). With it the store also owns the collection's
 * motion (no separate attach_all_reckon): each confirmed entity forwards by the
 * snapshot age PLUS the entry's measured input lead — 0 for a foreign entity,
 * the exact per-spawn uplink for an owned one (see spawn_time). An owned
 * projectile thus keeps flying the shooter's timeline through the handoff
 * instead of snapping back by lead x velocity.
 */
typedef struct {
    const colyseus_schema_vtable_t* entry_vtable;
    const char* const* fields;
    int field_count;
    /* The step, SHARED with the server — the same motion the store's `step`
     * integrates for pending locals, against a schema scratch. */
    colyseus_predict_step_fn step;
    /* 0 = raw projection, the right default here: a deterministic constant-step
     * projectile rebases exactly, so smoothing only adds lag. */
    double smoothing;
    double substep_ms;              /* 0 -> 16 */
    void* userdata;
} colyseus_spawns_reckon_t;
/**
 * Route a collection's adds/removes into a spawn store AND drive the store
 * from tick(). This is the whole wiring a predicted-spawn collection needs.
 *
 * `reckon` is optional (NULL = confirmed entities read raw, un-reckoned).
 */
void colyseus_predict_bind_spawns(colyseus_predict_t* p, colyseus_spawns_t* spawns,
    colyseus_schema_t* state, const char* collection,
    const colyseus_spawns_reckon_t* reckon);