platforms/flutter/colyseus_flutter/lib/src/bindings/colyseus_core.dart


final class colyseus_drift_t extends ffi.Struct {
  @ffi.Double()
  external double ema;

  @ffi.Double()
  external double peak;
}

enum colyseus_drift_status_t {
  COLYSEUS_DRIFT_MATCHED(0),
  COLYSEUS_DRIFT_JITTER(1),
  COLYSEUS_DRIFT_DIVERGING(2);

  final int value;
  const colyseus_drift_status_t(this.value);

  static colyseus_drift_status_t fromValue(int value) => switch (value) {
        0 => COLYSEUS_DRIFT_MATCHED,
        1 => COLYSEUS_DRIFT_JITTER,
        2 => COLYSEUS_DRIFT_DIVERGING,
        _ => throw ArgumentError(
            "Unknown value for colyseus_drift_status_t: $value"),
      };
}

final class colyseus_reconciler extends ffi.Opaque {}

final class colyseus_predict extends ffi.Opaque {}

final class colyseus_step_ctx extends ffi.Struct {
  @ffi.Double()
  external double dt;

  @ffi.Double()
  external double dt_ms;

  @ffi.Int()
  external int tick;

  @ffi.Int()
  external int sub_steps;

  @ffi.Double()
  external double sub_dt;

  @ffi.Double()
  external double sub_dt_ms;

  @ffi.Bool()
  external bool is_replay;

  @ffi.Double()
  external double reckon_time;

  @ffi.Bool()
  external bool lag_comp_active;

  external ffi.Pointer<ffi.Void> _memo_backing;
}

typedef colyseus_step_ctx_t = colyseus_step_ctx;

final class colyseus_reconciler_options_t extends ffi.Struct {
  @ffi.Double()
  external double smoothing;

  @ffi.Double()
  external double snap;

  @ffi.Double()
  external double step_ms;

  @ffi.Double()
  external double step_seconds;

  @ffi.Int()
  external int sub_steps;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> fields;

  @ffi.Int()
  external int field_count;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int acked, ffi.Pointer<ffi.Void> userdata)>>
      on_reconcile;

  @ffi.Bool()
  external bool manual_step;

  external ffi.Pointer<ffi.Void> userdata;
}

typedef colyseus_reconciler_t = colyseus_reconciler;
typedef colyseus_reconciler_step_fn
    = ffi.Pointer<ffi.NativeFunction<colyseus_reconciler_step_fnFunction>>;
typedef colyseus_reconciler_step_fnFunction = ffi.Void Function(
    ffi.Pointer<colyseus_step_ctx_t> ctx,
    ffi.Pointer<colyseus_schema_t> state,
    ffi.Pointer<colyseus_schema_t> command,
    ffi.Pointer<ffi.Void> userdata);
typedef Dartcolyseus_reconciler_step_fnFunction = void Function(
    ffi.Pointer<colyseus_step_ctx_t> ctx,
    ffi.Pointer<colyseus_schema_t> state,
    ffi.Pointer<colyseus_schema_t> command,
    ffi.Pointer<ffi.Void> userdata);

final class colyseus_bound_field_t extends ffi.Struct {
  external ffi.Pointer<colyseus_schema_t> source;

  external ffi.Pointer<ffi.Char> field;

  external ffi.Pointer<ffi.Char> pose_key;
}

final class colyseus_event_channel extends ffi.Opaque {}

final class colyseus_event_channel_options_t extends ffi.Struct {
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void> payload,
              ffi.Pointer<ffi.Void> userdata)>> on_predict;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void> payload,
              ffi.Pointer<ffi.Void> userdata)>> on_confirm;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void> payload,
              ffi.Pointer<ffi.Void> userdata)>> on_reject;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Char> key, ffi.Pointer<ffi.Void> userdata)>>
      on_unpredicted;

  external ffi.Pointer<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void> payload)>>
      payload_free;

  @ffi.Int()
  external int grace_ticks;

  @ffi.Double()
  external double ttl_ms;

  @ffi.Double()
  external double cooldown_ms;

  external ffi.Pointer<ffi.Void> userdata;
}

typedef colyseus_event_channel_t = colyseus_event_channel;

final class colyseus_spawns extends ffi.Opaque {}

final class colyseus_spawn_entry_t extends ffi.Struct {
  @ffi.Int()
  external int id;

  external ffi.Pointer<colyseus_schema_t> server;

  external ffi.Pointer<ffi.Void> local;

  @ffi.Bool()
  external bool confirmed;

  @ffi.Double()
  external double lead_ms;
}

final class colyseus_spawns_options_t extends ffi.Struct {
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<colyseus_schema_t> server,
              ffi.Pointer<ffi.Void> userdata)>> owned;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<ffi.Void> local,
              ffi.Pointer<colyseus_schema_t> server,
              ffi.Pointer<ffi.Void> userdata)>> correlate;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Double Function(ffi.Pointer<colyseus_schema_t> server,
              ffi.Pointer<ffi.Void> userdata)>> spawn_time;

  @ffi.Bool()
  external bool has_spawn_time;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void> local, ffi.Double dt,
              ffi.Pointer<ffi.Void> userdata)>> step;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Double Function(
              ffi.Pointer<ffi.Void> local,
              ffi.Pointer<ffi.Char> field,
              ffi.Pointer<ffi.Void> userdata)>> local_read;

  @ffi.Double()
  external double ttl_ms;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void> local, ffi.Int id,
              ffi.Pointer<ffi.Void> userdata)>> on_reject;

  external ffi.Pointer<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void> local)>>
      local_free;

  external ffi.Pointer<ffi.Void> userdata;
}

typedef colyseus_spawns_t = colyseus_spawns;

enum colyseus_predict_mode_t {
  COLYSEUS_PREDICT_LERP(0),
  COLYSEUS_PREDICT_EXTRAPOLATE(1),
  COLYSEUS_PREDICT_DAMPED(2),
  COLYSEUS_PREDICT_RECKON(3),
  COLYSEUS_PREDICT_RAW(4);

  final int value;
  const colyseus_predict_mode_t(this.value);

  static colyseus_predict_mode_t fromValue(int value) => switch (value) {
        0 => COLYSEUS_PREDICT_LERP,
        1 => COLYSEUS_PREDICT_EXTRAPOLATE,
        2 => COLYSEUS_PREDICT_DAMPED,
        3 => COLYSEUS_PREDICT_RECKON,
        4 => COLYSEUS_PREDICT_RAW,
        _ => throw ArgumentError(
            "Unknown value for colyseus_predict_mode_t: $value"),
      };
}

final class colyseus_predict_field_options_t extends ffi.Struct {
  @ffi.UnsignedInt()
  external int modeAsInt;

  colyseus_predict_mode_t get mode =>
      colyseus_predict_mode_t.fromValue(modeAsInt);

  @ffi.Double()
  external double delay;

  @ffi.Double()
  external double damping;

  @ffi.Double()
  external double max_extrapolate;

  @ffi.Double()
  external double tick_interval;

  @ffi.Double()
  external double snap;

  @ffi.Bool()
  external bool angle;
}

typedef colyseus_predict_t = colyseus_predict;
typedef colyseus_callbacks_t = colyseus_callbacks;

final class colyseus_attach_field_t extends ffi.Struct {
  external ffi.Pointer<ffi.Char> field;

  external ffi.Pointer<colyseus_predict_field_options_t> opts;
}

typedef colyseus_predict_step_fn
    = ffi.Pointer<ffi.NativeFunction<colyseus_predict_step_fnFunction>>;
typedef colyseus_predict_step_fnFunction = ffi.Void Function(
    ffi.Pointer<colyseus_schema_t> state,
    ffi.Double dt,
    ffi.Double elapsed_ms,
    ffi.Pointer<ffi.Void> userdata);
typedef Dartcolyseus_predict_step_fnFunction = void Function(
    ffi.Pointer<colyseus_schema_t> state,
    double dt,
    double elapsed_ms,
    ffi.Pointer<ffi.Void> userdata);

/// Optional dead reckoning of a spawn collection's CONFIRMED entities, passed to
/// colyseus_predict_bind_spawns(). With it the store also owns the collection's
/// motion (no separate attach_all_reckon): each confirmed entity forwards by the
/// snapshot age PLUS the entry's measured input lead — 0 for a foreign entity,
/// the exact per-spawn uplink for an owned one (see spawn_time). An owned
/// projectile thus keeps flying the shooter's timeline through the handoff
/// instead of snapping back by lead x velocity.
final class colyseus_spawns_reckon_t extends ffi.Struct {
  external ffi.Pointer<colyseus_schema_vtable_t1> entry_vtable;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> fields;

  @ffi.Int()
  external int field_count;

  external colyseus_predict_step_fn step;

  @ffi.Double()
  external double smoothing;

  @ffi.Double()
  external double substep_ms;

  external ffi.Pointer<ffi.Void> userdata;
}

final class colyseus_sim_world extends ffi.Opaque {}

final class colyseus_sim_part_t extends ffi.Struct {
  /// Pose-key prefix, e.g. "paddle" -> "paddle.x". Must be unique.
  external ffi.Pointer<ffi.Char> name;

  /// Decoded truth instance; NULL makes the part opaque.
  external ffi.Pointer<colyseus_schema_t> source;

  /// Required when `source` is set (static vtables only).
  external ffi.Pointer<colyseus_schema_vtable_t1> vtable;

  /// App pointer for an opaque part; ignored when `source` is set.
  external ffi.Pointer<ffi.Void> opaque;
}

final class colyseus_sim_reconciler_options_t extends ffi.Struct {
  external ffi.Pointer<colyseus_sim_part_t> parts;

  @ffi.Int()
  external int part_count;

  @ffi.Double()
  external double smoothing;

  @ffi.Double()
  external double snap;

  @ffi.Double()
  external double step_ms;

  @ffi.Double()
  external double step_seconds;

  @ffi.Int()
  external int sub_steps;

  /// Restore the OPAQUE parts from authority before each replay. Bound parts
  /// are pulled from their sources first, unconditionally. Required when no
  /// part is bound — otherwise there is no restore point and creation fails.
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<colyseus_sim_world_t> world,
              ffi.Pointer<ffi.Void> userdata)>> adopt;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int acked, ffi.Pointer<ffi.Void> userdata)>>
      on_reconcile;

  /// Manual pump mode: `step` may be NULL, the host drains steps through
  /// colyseus_reconciler_pump_*() (see reconciler.h).
  @ffi.Bool()
  external bool manual_step;

  external ffi.Pointer<ffi.Void> userdata;
}

/// Opaque handle to the world, passed to the step and adopt callbacks.
typedef colyseus_sim_world_t = colyseus_sim_world;

/// Deterministic step over the whole world, SHARED with the server. Fetch parts
/// with colyseus_sim_world_part(); mutate them in place.
typedef colyseus_sim_step_fn
    = ffi.Pointer<ffi.NativeFunction<colyseus_sim_step_fnFunction>>;
typedef colyseus_sim_step_fnFunction = ffi.Void Function(
    ffi.Pointer<colyseus_step_ctx_t> ctx,
    ffi.Pointer<colyseus_sim_world_t> world,
    ffi.Pointer<colyseus_schema_t> command,
    ffi.Pointer<ffi.Void> userdata);
typedef Dartcolyseus_sim_step_fnFunction = void Function(
    ffi.Pointer<colyseus_step_ctx_t> ctx,
    ffi.Pointer<colyseus_sim_world_t> world,
    ffi.Pointer<colyseus_schema_t> command,
    ffi.Pointer<ffi.Void> userdata);
